# sit_msgs

./: CMakeLists.txt  CMakeLists.txt~  package.xml
msg/: EpisodicScoreItem.msg  Forgot.msg~  LowScore.msg~  RetrievalEpisodic.msg  RetrievalSemantic.msg  RetrievalSemantic.msg~  ScoreCounter.msg  SemanticScoreItem.msg  SemanticScoreItem.msg~  SpatialAtom.msg  SpatialAtom.msg~  SpatialRelation.msg~  SpatialRelationship.msg  atom.msg  atom.msg~  example.msg~  geometricCharacteristic.msg  geometricCharacteristic.msg~  objectPropertyRetrieval.msg  retrievalAtom.msg  retrievalAtom.msg~
srv/: EpisodicInterface.srv  EpisodicInterface.srv~  ScoreInterface.srv  ScoreInterface.srv~  SemanticInterface.srv  SemanticInterface.srv~
